# Shrimp

./: .gitignore  .notes  .todo  CHANGELOG.md  CMakeLists.txt  README.md  Shrimp.cabal  {
.github/workflows/: haskell.yml
Criterion/: Criterion.cabal
Criterion/app/: BUS.hs  Cartridge.hs  Display.hs  MOS6502.hs  Mapper.hs  Memory.hs  R2C02.hs  Utils.hs
Criterion/app/Cartridge/: Loader.hs
Criterion/app/Mapper/: Mapper0.hs  Type.hs
Criterion/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Performance/: CHANGELOG.md  Criterion.cabal  ShrimpZ.cabal  Todo
Performance/app/: Communication.hs  Main.hs
Performance/app/Emulator/: Main.hs
Performance/app/Frontend/: Common.hs  Control.hs  Main.hs  Render.hs
Performance/app/Frontend/Renderer/: Nametable.hs  Palette.hs  Pattern.hs  Status.hs
Performance/app/Shrimp/: BUS.hs  Cartridge.hs  Display.hs  Memory.hs  R2C02.hs
Performance/app/Shrimp/Mapper/: Mapper0.hs  Type.hs
Performance/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Performance/dist-newstyle/tmp/environment.-2116114/: .ghc.environment.x86_64-linux-9.6.1
Tools/: nes_dissector.py  {
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
exe/: Communication.hs  Debug.hs  Demo.hs  Emulator.hs  Launcher.hs  Main.hs  Renderer.hs
exe/Emulator/: Main.hs
exe/Emulator/Extended/: Main.hs
exe/Emulator/Simple/: Main.hs
exe/Frontend/: Common.hs  Control.hs  Main.hs  Render.hs
exe/Frontend/Extended/: Common.hs  Control.hs  Main.hs  Render.hs
exe/Frontend/Extended/Renderer/: Display.hs  FPS.hs  Instructions.hs  Nametable.hs  OAM.hs  Palette.hs  Pattern.hs  Status.hs
exe/Frontend/Renderer/: Display.hs  FPS.hs  Instructions.hs  Nametable.hs  OAM.hs  Status.hs
exe/Frontend/Simple/: Common.hs  Control.hs  Main.hs  Render.hs
exe/Frontend/Simple/Renderer/: Display.hs
exe/Renderer/: CPUInstructions.hs  CPUState.hs  Common.hs  Control.hs  Nametable.hs  Palette.hs  Pattern.hs  Render.hs  Screen.hs
exe/Shrimp/: AbstractBus.hs  BUS.hs  Bus.hs  CPU.hs  Cartridge.hs  Controller.hs  Display.hs  INES.hs  IO.hs  Instructions.hs  Interface.hs  Loader.hs  MOS6502.hs  Mapper.hs  Memory.hs  NES.hs  R2C02.hs  Utils.hs
exe/Shrimp/Cartridge/: Loader.hs
exe/Shrimp/Frontend/: GUI.hs
exe/Shrimp/IO/: Input.hs  Output.hs
exe/Shrimp/MOS6502/: Disassembler.hs
exe/Shrimp/Mapper/: AbstractMapper.hs  Mapper.hs  Mapper0.hs  Type.hs
exe/Shrimp/R2C02/: Fast.hs  Internal.hs
exe/Test/: CPU.hs  Main.hs
exe/Test/TomHarte/6502/: README.md
exe/test/: Main.hs
src/: CMakeLists.txt  main.cpp
src/Core/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt
