cabal-version:      3.0
name:               Shrimp
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
ghc-options: -Wall

executable Shrimp-exe
  import:           warnings
  main-is:          Main.hs
  other-modules:    Shrimp.AbstractBus, 
                    Shrimp.MOS6502, 
                    Shrimp.Mapper.Mapper, 
                    Shrimp.Mapper.AbstractMapper, 
                    Shrimp.Mapper.Mapper0, 
                    Shrimp.Cartridge, 
                    Shrimp.Cartridge.Loader, 
                    Shrimp.NES, 
                    Shrimp.R2C02, 
                    Shrimp.Memory,
                    Communication,
                    Emulator,
                    Renderer,
                    Renderer.CPUState,
                    Renderer.Nametable,
                    Renderer.Pattern,
                    Renderer.CPUInstructions,
                    Renderer.Common,
                    Renderer.Control, 
                    Renderer.Render
                   -- Add other necessary modules here
  -- other-extensions:
  build-depends:    base >= 4.18.0.0,
                    mtl >= 2.3.1,
                    bytestring >= 0.11.4.0,
                    array >= 0.5.5.0,
                    vector >= 0.13.0.0,
                    containers >= 0.6.8,
                    sdl2 >= 2.5.5.0, 
                    sdl2-ttf >= 2.1.3,
                    text >= 2.0,
                    stm >= 2.5.1.0,
                    time >= 1.12.2,
                    split >= 0.2.5

  hs-source-dirs:   exe
  default-language: Haskell2010
test-suite Shrimp-Test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   exe
    main-is:          Test/Main.hs
    other-modules:    Shrimp.AbstractBus, Shrimp.MOS6502, Test.CPU
    build-depends:    base >=4.16.4.0,
                      hspec >= 2.11.1,
                      aeson >= 2.2.1.0,
                      mtl >= 2.3.1,
                      bytestring >= 0.11.4.0,
                      filepath >= 1.4.100.1,
                      array >= 0.5.5.0,
                      containers >= 0.6.8,

