cabal-version:      3.0
name:               Shrimp
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
ghc-options: -Wall -fwarn-missing-signatures

executable Shrimp-exe
  ghc-options: -O2 
  import:           warnings
  main-is:          Main.hs


  other-modules:    Launcher,
                    Debug,
                    Shrimp.MOS6502, 
                    Shrimp.Utils, 
                    Shrimp.R2C02, 
                    Shrimp.R2C02.Fast, 
                    Shrimp.R2C02.Internal, 
                    Shrimp.Memory, 
                    Shrimp.Display, 
                    Shrimp.Cartridge, 
                    Shrimp.Cartridge.Loader, 
                    Shrimp.Controller, 
                    Shrimp.Mapper.Type, 
                    Shrimp.Mapper, 
                    Shrimp.Mapper.Mapper0, 
                    Shrimp.BUS,
                    Shrimp.NES,
                    Communication,
                    Frontend.Main,
                    Frontend.Common,
                    Frontend.Control,
                    Frontend.Render,
                    Frontend.Renderer.Status,
                    Frontend.Renderer.Nametable,
                    Frontend.Renderer.Instructions,
                    Frontend.Renderer.Pattern,
                    Frontend.Renderer.Palette,
                    Frontend.Renderer.Display,
                    Frontend.Renderer.FPS,
                    Frontend.Renderer.OAM,
                    Emulator.Main
                   -- Add other necessary modules here
  -- other-extensions:
  build-depends:    base >= 4.18.0.0,
                    mtl >= 2.3.1,
                    bytestring >= 0.11.4.0,
                    array >= 0.5.5.0,
                    vector >= 0.13.0.0,
                    containers >= 0.6.8,
                    sdl2 >= 2.5.5.0, 
                    sdl2-ttf >= 2.1.3,
                    text >= 2.0,
                    stm >= 2.5.1.0,
                    time >= 1.12.2,
                    split >= 0.2.5

  hs-source-dirs:   exe
  default-language: Haskell2010
test-suite Shrimp-Test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   exe
    main-is:          Test/Main.hs
    other-modules:    Shrimp.MOS6502, Shrimp.Memory, Test.CPU, Shrimp.Utils

    build-depends:    base >= 4.18.0.0,
                      hspec >= 2.11.1,
                      aeson >= 2.2.1.0,
                      mtl >= 2.3.1,
                      bytestring >= 0.11.4.0,
                      filepath >= 1.4.100.1,
                      array >= 0.5.5.0,
                      vector >= 0.13.0.0,
                      containers >= 0.6.8,

