cabal-version:      3.0
name:               Shrimp
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
ghc-options: -Wall -fwarn-missing-signatures

executable Shrimp-exe
  ghc-options: -O2 
  import:           warnings
  main-is:          Main.hs


  other-modules:    Launcher,
                    Debug,
                    Shrimp.MOS6502, 
                    Shrimp.Utils, 
                    Shrimp.R2C02, 
                    Shrimp.R2C02.Fast, 
                    Shrimp.R2C02.Internal, 
                    Shrimp.Memory, 
                    Shrimp.Display, 
                    Shrimp.Cartridge, 
                    Shrimp.Cartridge.Loader, 
                    Shrimp.Controller, 
                    Shrimp.Mapper.Type, 
                    Shrimp.Mapper, 
                    Shrimp.Mapper.Mapper0, 
                    Shrimp.BUS,
                    Shrimp.NES,
                    Communication,
                    Frontend.Extended.Common,
                    Frontend.Extended.Control,
                    Frontend.Extended.Render,
                    Frontend.Extended.Renderer.Status,
                    Frontend.Extended.Renderer.Nametable,
                    Frontend.Extended.Renderer.Instructions,
                    Frontend.Extended.Renderer.Pattern,
                    Frontend.Extended.Renderer.Palette,
                    Frontend.Extended.Renderer.Display,
                    Frontend.Extended.Renderer.FPS,
                    Frontend.Extended.Renderer.OAM,
                    Emulator.Extended.Main,
                    Frontend.Simple.Main,
                    Frontend.Simple.Common,
                    Frontend.Simple.Control,
                    Frontend.Simple.Render,
                    Frontend.Simple.Renderer.Display,
                    Emulator.Simple.Main

                   -- Add other necessary modules here
  -- other-extensions:
  build-depends:    base >= 4.18.0.0,
                    mtl >= 2.3.1,
                    bytestring >= 0.11.4.0,
                    array >= 0.5.5.0,
                    vector >= 0.13.0.0,
                    containers >= 0.6.8,
                    sdl2 >= 2.5.5.0, 
                    sdl2-ttf >= 2.1.3,
                    text >= 2.0,
                    stm >= 2.5.1.0,
                    time >= 1.12.2,
                    split >= 0.2.5

  hs-source-dirs:   exe
  default-language: Haskell2010
test-suite Shrimp-Test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   exe
    main-is:          Test/Main.hs
    other-modules:    Shrimp.MOS6502, Shrimp.Memory, Test.CPU, Shrimp.Utils

    build-depends:    base >= 4.18.0.0,
                      hspec >= 2.11.1,
                      aeson >= 2.2.1.0,
                      mtl >= 2.3.1,
                      bytestring >= 0.11.4.0,
                      filepath >= 1.4.100.1,
                      array >= 0.5.5.0,
                      vector >= 0.13.0.0,
                      containers >= 0.6.8,

