cabal-version:      2.4
name:               Criterion
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             lesserfish
maintainer:         lesserfish@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Criterion
    main-is: Main.hs
    other-modules: Launcher,
                   Shrimp.MOS6502, 
                   Shrimp.Utils, 
                   Shrimp.R2C02, 
                   Shrimp.Memory, 
                   Shrimp.Display, 
                   Shrimp.Cartridge, 
                   Shrimp.Cartridge.Loader, 
                   Shrimp.Mapper.Type, 
                   Shrimp.Mapper, 
                   Shrimp.Mapper.Mapper0, 
                   Shrimp.BUS,
                   Shrimp.NES,
                   Communication,
                   Frontend.Main,
                   Frontend.Common,
                   Frontend.Control,
                   Frontend.Render,
                   Frontend.Renderer.Status,
                   Frontend.Renderer.Instructions,
                   Frontend.Renderer.Pattern,
                   Frontend.Renderer.Palette,
                   Frontend.Renderer.Display,
                   Emulator.Main

    build-depends: base ^>=4.18.0.0,
                  mtl >= 2.3.1,
                  bytestring >= 0.11.4.0,
                  array >= 0.5.5.0,
                  vector >= 0.13.0.0,
                  containers >= 0.6.8,
                  sdl2 >= 2.5.5.0, 
                  sdl2-ttf >= 2.1.3,
                  text >= 2.0,
                  stm >= 2.5.1.0,
                  time >= 1.12.2,
                  split >= 0.2.5

    hs-source-dirs:   app
    default-language: Haskell2010
